first move function X and O, and adds X/Os to board

--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,12 @@ body {
 
 .box {
   display: inline-block;
-  width: 320px;
-  height: 320px;
-  border: 2px solid teal;
-  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+  border: 1px solid teal;
+  margin: 2px;
+  /*border-radius: 10px;*/
   /*background-color: rgba(142, 228, 219, 0.5);*/
   /*background-color: rgba(146, 125, 68, 0.5);*/
-  /* display: inline-block; */}
+  /* display: inline-block; */
+}
