--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,32 @@
+
 body {
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-left: 50px;
   /*background-color: #2c3e50;*/
+  background-image: url("");
   font-size: 100%;
   line-height: 1.25;
   font-family: 'Lato', Arial, sans-serif;
 }
 
-.board_container {
+/*.board_container {
     margin-left: 600px;
     align-content: center;
-    /*background-image: url(http://subtlepatterns.com/patterns/pool_table.png);*/
+    background-image: url(http://subtlepatterns.com/patterns/pool_table.png);
+}
+*/
+#column-left {
+  display: inline-block;
+  /*border: 1px solid yellow;*/
+  vertical-align: top;
+  width: 350px;
+  margin-left: 80px;
+}
+
+#column-right {
+  display: inline-block;
+  width: 750px;
+  /*border: 1px solid black;*/
 }
 
 /*.box {
@@ -27,14 +44,14 @@ body {
 
 /*-------------------------------------------------------*/
 
-div {
+/*div {
   width: 200px;
   height: 200px;
   position: relative;
   overflow: hidden;
   background: #ddd;
 }
-
+*/
 svg {
   position: absolute;
   top: 0;
@@ -50,27 +67,27 @@ svg line {
   transition: transform .6s ease-out;
 }
 
-div:hover svg line {
+.box:hover svg line {
   -webkit-transform: translateX(-400px);
   transform: translateX(-400px);
 }
 
-div:hover svg line.top {
+.box:hover svg line.top {
   -webkit-transform: translateX(-400px);
   transform: translateX(-400px);
 }
 
-div:hover svg line.bottom {
+.box:hover svg line.bottom {
   -webkit-transform: translateX(400px);
   transform: translateX(400px);
 }
 
-div:hover svg line.left {
+.box:hover svg line.left {
   -webkit-transform: translateY(400px);
   transform: translateY(400px);
 }
 
-div:hover svg line.right {
+.box:hover svg line.right {
   -webkit-transform: translateY(-400px);
   transform: translateY(-400px);
 }
@@ -78,10 +95,11 @@ div:hover svg line.right {
 .box {
   width: 200px;
   height: 200px;
+  vertical-align: top;
   position: relative;
   background: rgba(255,255,255,1);
   display: inline-block;
-  margin: 0 10px;
+  margin: 10px 10px;
   cursor: pointer;
   color: #2c3e50;
   box-shadow: inset 0 0 0 3px #2c3e50;
