--- a/css/style2.css
+++ b/css/style2.css
@@ -3,11 +3,24 @@ body {
   padding-top: 50px;
   padding-left: 50px;
   /*background-color: #2c3e50;*/
-  background: url("/images/grey_tile.png");
-  background-repeat: repeat;
+  background-image: url("");
   font-size: 100%;
   line-height: 1.25;
   font-family: 'Lato', Arial, sans-serif;
+}
+
+h2 {
+  color: white;
+  font-size: 30px;
+  /*font-family: helvetica;*/
+}
+
+ul {
+  color: white;
+}
+
+p {
+  color: white;
 }
 
 /*.board_container {
@@ -98,24 +111,25 @@ svg line {
   height: 200px;
   vertical-align: top;
   position: relative;
-  background: rgba(255,255,255,1);
+  background: rgba(124, 183, 121, .5);
   display: inline-block;
   margin: 10px 10px;
   cursor: pointer;
-  color: #2c3e50;
-  box-shadow: inset 0 0 0 3px #2c3e50;
+  color: white;
+  box-shadow: inset 0 0 0 3px white;
   -webkit-transition: background 0.4s 0.5s;
   transition: background 0.4s 0.5s;
 }
 
 .box:hover {
-  background: rgba(255,255,255,0);
+  /*background: rgba(255,255,255,0);*/
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
 }
 
 .box h3 {
   font-family: "Ruthie", cursive;
+  color: white;
   font-size: 180px;
   line-height: 200px;
   margin: 0;
